[package]
name = "rel"
version = "0.1.0"
authors = ["alex <alex8224@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = {version="1.0", features=["extra-traits"]}


[lib]
proc-macro = true

